// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardImageContainer component > matches the snapshot for desktop view in dark mode 1`] = `
<DocumentFragment>
  <div
    class="z-[4]"
  >
    <div
      data-testid="image-container-testid"
      style="height: 600px; box-shadow: inset 0px 0px 40px 40px #000; position: relative;"
    >
      <div
        class="absolute inset-0 flex items-center justify-center"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1yonwsg-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-1a8epmm-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
      <img
        alt=""
        class="undefined opacity-0"
        data-testid="image-testid"
        src="path/to/image.jpg"
        style="height: 600px; aspect-ratio: 16:9; position: relative; z-index: -1; opacity: 1; transition: opacity 1s ease-in;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DashboardImageContainer component > matches the snapshot for desktop view in light mode 1`] = `
<DocumentFragment>
  <div
    class="z-[4]"
  >
    <div
      data-testid="image-container-testid"
      style="height: 600px; box-shadow: inset 0px 0px 40px 40px #fff; position: relative;"
    >
      <div
        class="absolute inset-0 flex items-center justify-center"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1yonwsg-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-1a8epmm-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
      <img
        alt=""
        class="undefined opacity-0"
        data-testid="image-testid"
        src="path/to/image.jpg"
        style="height: 600px; aspect-ratio: 16:9; position: relative; z-index: -1; opacity: 1; transition: opacity 1s ease-in;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DashboardImageContainer component > matches the snapshot for mobile view in dark mode 1`] = `
<DocumentFragment>
  <div
    class="z-[4]"
  >
    <div
      data-testid="image-container-testid"
      style="height: 260px; box-shadow: inset 0px 0px 18px 20px #000; position: relative;"
    >
      <div
        class="absolute inset-0 flex items-center justify-center"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1yonwsg-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-1a8epmm-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
      <img
        alt=""
        class="undefined opacity-0"
        data-testid="image-testid"
        src="path/to/image.jpg"
        style="height: 260px; aspect-ratio: 16:9; position: relative; z-index: -1; opacity: 1; transition: opacity 1s ease-in;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DashboardImageContainer component > matches the snapshot for mobile view in light mode 1`] = `
<DocumentFragment>
  <div
    class="z-[4]"
  >
    <div
      data-testid="image-container-testid"
      style="height: 260px; box-shadow: inset 0px 0px 18px 20px #fff; position: relative;"
    >
      <div
        class="absolute inset-0 flex items-center justify-center"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1yonwsg-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-1a8epmm-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
      <img
        alt=""
        class="undefined opacity-0"
        data-testid="image-testid"
        src="path/to/image.jpg"
        style="height: 260px; aspect-ratio: 16:9; position: relative; z-index: -1; opacity: 1; transition: opacity 1s ease-in;"
      />
    </div>
  </div>
</DocumentFragment>
`;
